--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div id="modal" class="button-wrapper">
-        <h1>Plant Store</h1>
+        <h1>Indoor Plants Store</h1>
         <button onclick="showModal1()">Online Store Details</button>
         <button onclick="showModal2()">Store Opening & Closing Time</button>
         <button onclick="showModal3()">Did U Know ?</button>
